perbaikan fitur dan penambahan menu ringkasan
