# api_external/serializers.py
@@ -18,20 +18,6 @@ class ExternalIndicatorEnvelopeSerializer(serializers.Serializer):
     results = ExternalIndicatorResultSerializer(many=True)
 
 
-class ExternalVerifiedRecordSerializer(serializers.Serializer):
-    id = serializers.UUIDField()
-    source_key = serializers.CharField()
-    data = serializers.JSONField()
-    verified_at = serializers.DateTimeField(allow_null=True)
-    updated_at = serializers.DateTimeField()
-
-
-class ExternalRecordEnvelopeSerializer(serializers.Serializer):
-    record_type = serializers.CharField()
-    count = serializers.IntegerField()
-    results = ExternalVerifiedRecordSerializer(many=True)
-
-
 class ExternalHealthIndicatorResultSerializer(serializers.Serializer):
     periode = serializers.CharField()
     jenis_periode = serializers.CharField()
